bzr-svn 0.6.2                    UNRELEASED

  FEATURES

   * Integrated "bzr svn-serve" into "bzr serve --svn".

   * ``append_revisions_only`` now defaults to True, to prevent new users
     from accidently changing their Subversion mainline and upsetting their 
     fellow committers. (#383777)

  PERFORMANCE

   * Avoid expensive fetching of tags just to figure out they are supported.

  BUG FIXES

   * Only look for file properties if there are actually new file properties.
     (#383414)

   * Repository.iter_inventories() is now implemented.

   * Tags.get_reverse_dict().has_key() is now implemented.

   * Tags.get_reverse_dict().iteritems() is now implemented.

   * Register Subversion smart server as first server control format, 
     before the Bazaar smart client attempts to send POST to .bzr/smart over 
     HTTP.

   * Support "bzr push --create-prefix". (#383778)

   * In authentication fallback, ignore schemes that can not be 
     mapped to ports rather than erroring out. (#384813)

   * Cope with forbidden parts of the repository a bit better. (#261194)

   * Handle annotate after copies in Subversion. (#381523)

bzr-svn 0.6.1                    2009-05-22

  BUG FIXES

   * Cope with credentials in shared connections sometimes being a direct 
     dictionary.

   * Fix cache inspection after push when using the TDB database.

   * Prevent NoSuchRevision exception when pulling into a local branch that 
     is ahead of the remote branch.

   * Avoid buggy LogWalker.find_latest_change(). (#378799)

   * Use xdg cache directory (~/.cache/bzr-svn usually) if the Python XDG
     module is available.

   * Handle hidden revisions properly during branch fetch.

bzr-svn 0.6.0                    2009-05-20

  FEATURES

   * New cache database based on TDB (http://tdb.samba.org/). This is 
     significantly faster than the previous SQLite backend. The TDB 
     backend will automatically be used if TDB is available; if not, 