@@ -12,6 +12,9 @@ bzr-svn 0.6.2                    UNRELEASED
 
    * Avoid expensive fetching of tags just to figure out they are supported.
 
+   * Only check paths that actually have file properties set for 
+     Bazaar revision id properties.
+
   BUG FIXES
 
    * Only look for file properties if there are actually new file properties.
